fixed the left and right columns with flex wrap. Now they disappear entirely at a certain breakpoint

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -28,17 +28,20 @@ html {
 
 .app-container {
 	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
 }
 
-.left {
+/* .left {
 	width: 40%;
-}
-.right {
+} */
+
+/* .right {
 	width: 40%;
-}
+} */
 
 .mid {
-	max-width: 80rem;
+	max-width: 60rem;
 	padding: 20px;
 }
 
@@ -128,16 +131,6 @@ button:focus {
 	border: 2px solid black;
 }
 
-/****
-#f7e030   - javascript
-
-#de4c36    - git
-
-#8cc84b     - node js
-
-
-*/
-
 @media (max-width: 768px) {
 	.left,
 	.right {
@@ -148,12 +141,9 @@ button:focus {
 	}
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1155px) {
 	.left,
 	.right {
-		width: 15%;
-	}
-	.side-nav {
 		display: none;
 	}
 }
